# flask-test

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  runner.py
.devcontainer/: devcontainer.json  docker-compose.yaml  install-dev-tools.sh
src/: __init__.py  settings.py.example
src/config/: __init__.py  config.py
src/frontend/: __init__.py  routes.py
src/frontend/static/: style.css
src/frontend/templates/: base.html  home.html
