[tool.poetry]
authors = ["JTS <jtsunne@gmail.com>"]
description = ""
name = "flask-test"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
dependency-injector = "^4.43.0"
flask = "^3.1.0"
mock = "^5.1.0"
python = "^3.10"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest = "^8.3.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[flake8]
exclude = ".git,__pycache__,.vscode,.venv,.mypy_cache,.pytest_cache,.pyenv,~/.pyenv,~/.vscode"
ignore = "E203,E266,E402,E501,F401,W503"
max-line-length = 120